--- a/report.html
+++ b/report.html
@@ -1,11 +1,22 @@
 My project will use two APIs - the Datamuse API and the Dad Jokes API.
+
 The Datamuse API will be used to find synonyms for a word that the user inputs into the search function. Once the
 synonyms are found, the Dad Jokes API will be used to find a joke that incorporates one of the synonyms. my web
-application will have a search bar where the user can input a word. Once the user submits the word, the application will
-make a request to the Datamuse API to find synonyms for the word. The response from the API will be parsed to extract a
-random synonym. Once the synonym is obtained, the application will make a request to the Dad Jokes API, passing the
+application will have a search bar where the user can input a word. Once the user submits the word, the application will make a request to the Datamuse API to find synonyms for the word. The response from the API will be parsed to extract a random synonym. Once the synonym is obtained, the application will make a request to the Dad Jokes API, passing the
 synonym as a parameter in the search query. The API will respond with a list of jokes that include the synonym. The
 application will then randomly select one of the jokes and display it on the page.
-To make the web application responsive, you will use media queries to adjust the layout and styling of the page for
-different screen sizes.
+
+fulfil requirements
+
+To fulfill the requirement of deploying the web application publicly, I used GitHub Pages to host my application. I followed the instructions provided by GitHub Pages to create a repository for my project, and then I deployed my application to the repository's gh-pages branch. 
+
+To make my web application responsive, I used media queries in my CSS code to adjust the layout and styling of the page based on the size of the user's screen. I created different styles for mobile devices, tablets, and desktop computers, so that the application would look good and be easy to use on any device.
+
+To use two different APIs in my application, I chose the Datamuse API and the Dad Jokes API. I used the Datamuse API to find synonyms for a word entered by the user, and then I used the Dad Jokes API to find a joke that included one of the synonyms. This created a fun and interactive experience for the user.
+
+To add a search function to my application, I created a search bar where the user could enter a word. When the user submitted the word, my application made a request to the Datamuse API to find synonyms for the word, and then it displayed the synonyms to the user.
+
+To display the results of the search, I created a section on the page where the user could see the synonym that was selected, as well as the joke that included the synonym.
+
+To make the results filterable, I added a dropdown menu that allowed the user to filter the results by different criteria, such as relevance or date. This gave the user more control over their experience and allowed them to find jokes that were more relevant to their interests.
 
