--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
     </nav>
     <main class="col">
       <h1 class="display-1">Project 3</h1>
-      <p class="lead">This project does these things that I briefly explain here and followup a bit more with details
-        and demo below.</p>
+      <p class="lead">word. Once the user submits the word, the application will make a request to the Datamuse API to find synonyms for the word. The response from the API will be parsed to extract a random synonym. Once the synonym is obtained, the application will make a request to the Dad Jokes API, passing the
+synonym as a parameter in the search query. The API will respond with a list of jokes that include the synonym. The
+application will then randomly select one of the jokes and display it on the page.</p>
       <ul id="Synonyms-results">
       </ul>
       <section id="joke-results">
