--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     </nav>
     <main class="col">
       <h1 class="display-1">Project 3</h1>
-      <p class="lead">word. Once the user submits the word, the application will make a request to the Datamuse API to find synonyms for the word. The response from the API will be parsed to extract a random synonym. Once the synonym is obtained, the application will make a request to the Dad Jokes API, passing the
+      <p class="lead">The Datamuse API will be used to find synonyms for a word that the user inputs into the search function. Once the
+synonyms are found, the Dad Jokes API will be used to find a joke that incorporates one of the synonyms. my web
+application will have a search bar where the user can input a word. Once the user submits the word, the application will make a request to the Datamuse API to find synonyms for the word. The response from the API will be parsed to extract a random synonym. Once the synonym is obtained, the application will make a request to the Dad Jokes API, passing the
 synonym as a parameter in the search query. The API will respond with a list of jokes that include the synonym. The
 application will then randomly select one of the jokes and display it on the page.</p>
       <ul id="Synonyms-results">
